crates/keron-lang/tests/corpus/errors/parse/struct_decl_lowercase_name.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: struct names must start with an uppercase letter
  --> 1:1
  |
1 | struct point { x: Int, y: Int }
  | ^
